# rock

./: .gitignore  AUTHORS.md  Cargo.toml  README.md
.github/workflows/: CI.yml
benches/: profile_decode.rs
crates/core/: Cargo.toml
crates/core/benches/: profile_decode.rs
crates/core/src/: lib.rs
crates/core/src/graph/: mod.rs
crates/core/src/profile/: buffer.rs  errors.rs  function.rs  label.rs  line.rs  location.rs  mapping.rs  mod.rs  sample.rs  value_type.rs
crates/core/src/report/: mod.rs
crates/core/tests/: RR_CPU_golden.string
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/gui/static/: index.html
crates/transport/: Cargo.toml
crates/transport/src/: main.rs
http_server/: Cargo.toml  README.md
http_server/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: main.rs
proto_core/: Cargo.toml
proto_core/src/: lib.rs
proto_core/src/errors/: mod.rs
proto_core/src/profile/: buffer.rs  function.rs  label.rs  location.rs  mapping.rs  mod.rs  sample.rs  value_type.rs
rock_parser/: Cargo.toml
rock_parser/benches/: profile_decode.rs
rock_parser/src/: lib.rs
rock_parser/src/profile/: buffer.rs  function.rs  label.rs  line.rs  location.rs  mapping.rs  mod.rs  sample.rs  value_type.rs
rock_reports/: Cargo.toml
rock_reports/src/: lib.rs
rock_reports/src/reports/: mod.rs
rock_reports/src/reports/graph/: mod.rs
rock_server/: Cargo.toml
rock_utils/: Cargo.toml
rock_utils/src/: lib.rs
rock_utils/src/binutils/: mod.rs
rock_utils/src/types/: mod.rs
src/: lib.rs  main.rs
src/binutils/: binrep.rs  mod.rs
src/http_server/: mod.rs
src/profile/: buffer.rs  function.rs  label.rs  line.rs  location.rs  mapping.rs  mod.rs  sample.rs  value_type.rs
src/proto/: profile.proto
src/reports/: mod.rs
src/reports/graph/: mod.rs
tests/: CPU_GOLDEN.string  HEAP_GOLDEN.string  encoded  encoded.string
