[package]
name = "rock"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
homepage = "https://spiralscout.com"
repository = "https://github.com/48d90782/rock.git"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "rock"
path = "src/lib.rs"
crate-type = ["rlib"]

[workspace]
members = [
  ".",
  ]

[dependencies]
chrono = "0.4"
criterion = "0.3.3"
clap = "3.0.0-beta.1"
flate2 = "1.0"
mi-malloc_rust = { git = "https://github.com/48d90782/mi-malloc_rust", version = "0.3", default-features = false }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
lto = "fat"
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
rpath = false
codegen-units = 1
