[workspace]
members = [
    "crates/*",
]

#[dependencies]
#chrono = "0.4.19"
#clap = "3.0.0-beta.2"
#flate2 = "1.0.19"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
lto = "fat"
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
rpath = false
codegen-units = 1
