[package]
name = "launcher"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.4"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.11"
chan = "0.1.23"
clap = "2.33.0"
flate2 = "1.0.14"
futures = "0.3.4"
crossbeam = "0.7.3"
async-task = "1.3.1"
once_cell = "1.3.1"
num_cpus = "1.12.0"
proto_core = { path="../proto_core" }


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
lto = "fat"
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
rpath = false
codegen-units = 1