[package]
name = "rock_parser"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rock_parser"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bench]]
name = "profile_decode"
harness = false

[dependencies]
rock_utils = {path = "../rock_utils"}
flate2 = "1.0.14"
chrono = "0.4.11"
mimalloc = { version = "*", default-features = false }

[dev-dependencies]
criterion = "0.3.2"

