[package]
name = "rock_reports"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rock_utils = {path = "../rock_utils"}
rock_parser = {path = "../rock_parser"}

[lib]
name = "rock_reports"
path = "src/lib.rs"
crate-type = ["rlib"]