[package]
name = "core"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
repository = "https://github.com/48d90782/rock.git"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["rlib"]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "profile_decode"
path = "benches/profile_decode.rs"
harness = false

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
flate2 = "1.0.19"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
lto = "fat"
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
rpath = false
codegen-units = 1
