[package]
name = "gui"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.0"
directories-next = "2.0"